# dyninst

./: CMakeLists.txt
cmake/: DyninstConfig.cmake.in  DyninstInstall.cmake  DyninstLanguageStandards.cmake  DyninstOptions.cmake
cmake/Modules/: FindLibELF.cmake  FindLibIberty.cmake
cmake/tpls/: DyninstBoost.cmake  DyninstElfUtils.cmake  DyninstLibIberty.cmake  DyninstTBB.cmake
common/h/: Annotatable.h  Buffer.h  DynAST.h  Edge.h  Graph.h  IBSTree-fast.h  IBSTree.h  MachSyscall.h  Node.h  ProcReader.h  SymReader.h  VariableLocation.h  compiler_annotations.h  concurrent.h  dyn_regs.h  dyntypes.h  entryIDs.h  util.h
common/src/: Edge.C  Graph.C  IntervalTree.h  MappedFile.C  MappedFile.h  Node.C  NodeIterator.h  SyscallInformation.C  Timer.C  Timer.h  addrtranslate-freebsd.C  addrtranslate-linux.C  addrtranslate-sysv.C  addrtranslate-sysv.h  addrtranslate-win.C  addrtranslate.h  arch-aarch64.C  arch-aarch64.h  arch-power.C  arch-power.h  arch-x86.C  arch-x86.h  concurrent.C  debug_common.C  dthread.h  freebsdHeaders.h  freebsdKludges.C  freebsdKludges.h  headers.h  linuxHeaders.h  linuxKludges.C  linuxKludges.h  lprintf.h  ntHeaders.h  parseauxv.C  parseauxv.h  pathName.C  sha1.C  singleton_object_pool.h  symbolDemangle.c  (+1 more)
dataflowAPI/h/: ABI.h  Absloc.h  AbslocInterface.h  SymEval.h  bitArray.h  liveness.h  slicing.h  stackanalysis.h
dataflowAPI/src/: ABI.C  AbslocInterface.C  ExpressionConversionVisitor.C  ExpressionConversionVisitor.h  RegisterMap.C  RegisterMap.h  RoseImpl.C  RoseInsnFactory.C  RoseInsnFactory.h  SymEval.C  SymEvalPolicy.C  SymEvalPolicy.h  SymEvalVisitors.h  SymbolicExpansion.C  SymbolicExpansion.h  Visitors.C  convertOpcodes.C  debug_dataflow.C  debug_dataflow.h  liveness.C  slicing.C  stackanalysis.C
dwarf/h/: dwarfExprParser.h  dwarfFrameParser.h  dwarfHandle.h  dwarfResult.h
dwarf/src/: dwarfExprParser.C  dwarfFrameParser.C  dwarfHandle.C  dwarfResult.C
dynC_API/h/: dynC.h  snippetGen.h
dynC_API/src/: lex.dynC.C  snippetGen.C
dyninstAPI/h/: BPatch.h  BPatch_Set.h  BPatch_Vector.h  BPatch_addressSpace.h  BPatch_basicBlock.h  BPatch_basicBlockLoop.h  BPatch_binaryEdit.h  BPatch_callbacks.h  BPatch_dll.h  BPatch_flowGraph.h  BPatch_function.h  BPatch_image.h  BPatch_instruction.h  BPatch_loopTreeNode.h  BPatch_memoryAccess_NP.h  BPatch_module.h  BPatch_object.h  BPatch_parRegion.h  BPatch_point.h  BPatch_process.h  BPatch_snippet.h  BPatch_sourceObj.h  BPatch_statement.h  BPatch_type.h  StackMod.h
dyninstAPI/src/: BPatch.C  BPatch_addressSpace.C  BPatch_basicBlock.C  BPatch_basicBlockLoop.C  BPatch_collections.h  BPatch_flowGraph.C  BPatch_function.C  BPatch_image.C  BPatch_instruction.C  BPatch_libInfo.h  BPatch_memoryAccess.C  BPatch_memoryAccessAdapter.C  BPatch_memoryAccessAdapter.h  BPatch_module.C  BPatch_object.C  BPatch_point.C  BPatch_private.h  BPatch_process.C  BPatch_snippet.C  BPatch_sourceBlock.C  BPatch_statement.C  BPatch_type.C  IAPI_to_AST.C  Parsing.C  Parsing.h  RegisterConversion-aarch64.C  RegisterConversion-ppc.C  RegisterConversion-x86.C  RegisterConversion.h  addressSpace.C  addressSpace.h  ast.C  ast.h  baseTramp.C  baseTramp.h  binaryEdit.C  binaryEdit.h  block.h  codeRange.C  codeRange.h  (+79 more)
dyninstAPI_RT/h/: dyninstAPI_RT.h  dyninstRTExport.h
dyninstAPI_RT/src/: RTcommon.c  RTcommon.h  RTfreebsd.c  RTheap-linux.c  RTheap.c  RTheap.h  RTlinux.c  RTposix.c  RTsignal.c  RTstatic_ctors_dtors-x86.c  RTthread.h  RTwinnt.c
elf/h/: Elf_X.h
elf/src/: Elf_X.C
instructionAPI/h/: ArchSpecificFormatters.h  BinaryFunction.h  Dereference.h  Expression.h  Immediate.h  Instruction.h  InstructionAST.h  InstructionDecoder.h  Operand.h  Operation_impl.h  Register.h  Result.h  Ternary.h  Visitor.h
instructionAPI/src/: ArchSpecificFormatters.C  Immediate.C  Instruction.C  InstructionCategories.C  InstructionDecoder-aarch64.C  InstructionDecoder-aarch64.h  InstructionDecoder-power.C  InstructionDecoder-power.h  InstructionDecoder-x86.C  InstructionDecoder.C  InstructionDecoderImpl.C  InstructionDecoderImpl.h  Operand.C  Operation.C  Register.C  Ternary.C
parseAPI/h/: CFG.h  CFGFactory.h  CFGModifier.h  CodeObject.h  CodeSource.h  InstructionAdapter.h  InstructionSource.h  Location.h  LockFreeQueue.h  ParseCallback.h  SymLiteCodeSource.h
parseAPI/src/: Block.C  BoundFactCalculator.C  BoundFactCalculator.h  BoundFactData.C  BoundFactData.h  CFGFactory.C  CodeSource.C  Function.C  GraphAdapter.C  IA_IAPI.C  IA_IAPI.h  IA_aarch64.C  IA_aarch64.h  IA_amdgpu.C  IA_amdgpu.h  IA_power.C  IA_power.h  IA_x86.C  IA_x86.h  IdiomModelDesc.C  IndirectASTVisitor.h  IndirectAnalyzer.C  IndirectAnalyzer.h  InstructionAdapter.C  JumpTableFormatPred.C  JumpTableFormatPred.h  JumpTableIndexPred.h  Loop.C  LoopAnalyzer.h  ParseData.h  Parser.C  ParserDetails.h  ProbabilisticParser.C  ProbabilisticParser.h  StackTamperVisitor.h  SymLiteCodeSource.C  SymbolicExpression.C  SymbolicExpression.h  SymtabCodeSource.C  ThunkData.h  (+2 more)
parseThat/src/: sha1.C
patchAPI/h/: AddrSpace.h  Command.h  Instrumenter.h  PatchCFG.h  PatchCallback.h  PatchCommon.h  PatchMgr.h  PatchModifier.h  PatchObject.h  Point.h
patchAPI/src/: AddrSpace.C  PatchFunction.C  PatchLoop.C  Point.C  PointMaker.C
proccontrol/h/: Event.h  EventType.h  Generator.h  Handler.h  PCProcess.h  PlatFeatures.h  ProcessSet.h
proccontrol/src/: DecoderWindows.C  DecoderWindows.h  GeneratorWindows.h  arm_process.h  freebsd.C  freebsd.h  handler.C  int_event.h  int_handler.h  int_process.h  int_thread_db.C  int_thread_db.h  irpc.C  irpc.h  linux.C  linux.h  memcache.C  memcache.h  mmapalloc.C  mmapalloc.h  ppc_process.C  ppc_process.h  proc_service_wrapper.h  process.C  processplat.C  processplat.h  procset.C  resp.h  response.h  sysv.C  sysv.h  unix.C  unix.h  windows_handler.C  windows_process.C  windows_process.h  windows_thread.h  x86_process.C  x86_process.h
stackwalk/h/: basetypes.h  frame.h  framestepper.h  procstate.h  walker.h
stackwalk/src/: aarch64-swk.C  aarch64-swk.h  addrRange.h  analysis_stepper.C  analysis_stepper.h  callchecker-IAPI.C  callchecker.C  dbginfo-stepper.C  (+19 more)
(+105 files in other folders)
